<resources>
    <string name="app_name">TrovaTutto</string>
    <string name="app_title">TrovaTutto</string>
    <string name="title_activity_home">TrovaTutto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_item">Search item</string>

    <!-- Profile -->
    <string name="edit_profile_btn">Edit Profile</string>
    <string name="change_password_btn">Change Password</string>
    <string name="user_name">Name</string>
    <string name="user_surname">Surname</string>
    <string name="user_birthday">Birthday(YYYY/MM/DD)</string>
    <string name="user_address">Address</string>
    <string name="user_phone">Phone number</string>
    <string name="user_bio">Biography(Optional)</string>
    <string name="user_register_btn">Register</string>
    <string name="user_already_registered">Already registered ? Login Now !</string>
    <string name="empty_name">Name o Surname are empty</string>

    <!-- Login & Forgot password -->
    <string name="forgot_password">Forgot Password</string>
    <string name="not_registered_yet">Not registered yet ? Register Now !</string>
    <string name="login_btn">Login</string>
    <string name="tv_password">Password</string>
    <string name="tv_email">Email</string>
    <string name="code_pass_forgot">Code</string>
    <string name="back_to_login">Back to login</string>
    <string name="loading">Loading…</string>



    <!--Home Activity-->
    <string name="device_supp">This device is not supported</string>
    <string name="back_again">Please click BACK again to exit</string>
    <string name="loading_reports">Loading Reports...</string>
    <string name="reports_updated">Reports Updated !</string>
    <string name="logged_out">Logged out</string>

    <!-- Report details -->
    <string name="report_info_title">Title</string>
    <string name="report_info_subtitle">Subtitle</string>
    <string name="report_info_description">Description</string>
    <string name="report_info_address">Address</string>
    <string name="report_info_author">Author</string>
    <string name="report_info_category">Category</string>
    <string-array name="category_array">
        <item>Personal effects</item>
        <item>Electronic device</item>
        <item>Book</item>
        <item>Jewels</item>
        <item>Dress</item>
        <item>Documents</item>
        <item>Animals</item>
        <item>Other...</item>
    </string-array>
    <string name="insert_photo_btn">Insert photo</string>
    <string name="send_report_btn">Send report</string>
    <string name="btn_rep_delete">Delete</string>


    <!-- Change Password -->

    <string name="d_change_password_old">Old Password</string>
    <string name="d_change_password_new">New Password</string>
    <string name="time_remaining">Time remaining : </string>
    <string name="time_out">Time Out ! Request again to reset password</string>


    <!-- Insert Photo -->

    <string name="d_insert_photo_gallery">Gallery</string>
    <string name="d_insert_photo_camera">Camera</string>
    <string name="from">Select From</string>
    <string name="image_not_picked">You don\'t picked an image!</string>
    <string name="photo_not_taken">You don\'t take a photo!</string>



    <!-- Utility-->

    <string name="utility_from">Selected from</string>
    <string name="close_dialog">Close</string>
    <string name="empty_fields">Fields are empty!</string>
    <string name="apply">Apply</string>
    <string name="new_item">New Report</string>
    <string name="no_reports_found">No reports founded</string>

    <!-- Activity Home Drawer -->

    <string name="home_drawer_home">Items founded</string>
    <string name="home_drawer_profile">Profile</string>
    <string name="home_drawer_setting">Settings</string>
    <string name="home_drawer_rep">Reports</string>
    <string name="home_drawer_show_my_rep">Show my reports</string>
    <string name="home_drawer_send_rep">Send new report</string>
    <string name="home_drawer_logout">Logout</string>


    <!-- Preferences -->

    <string name="pref_title">Search</string>
    <string name="pref_subtitle1">See all Items</string>
    <string name="pref_subtitle2">Search by radius</string>
    <string name="pref_summary">You can choose the radius of items visualized</string>
    <string name="key_seekbar_preference" translatable="false">seekbar_preference</string>
    <string name="ch_radius_preference" translatable="false">ch_radius_preference</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_google_places_autocomplete">GooglePlacesAutocompleteActivity</string>

    <!-- Maps -->
    <string name="wrong_address_title">Wrong Address</string>
    <string name="wrong_address_message">The address isn\'t correct!!</string>

    <!-- Email -->
    <string name="hi">Hi! I\'m </string>
    <string name="need_to_contact">. I need to contact you for </string>
    <string name="subject">TrovaTutto: Report Ask for </string>
    <string name="send_mail">Send Mail...</string>
    <string name="sms_failed">SMS failed, please try again later</string>

</resources>
